tests/invalid_lex/single_ampersand.mc
int main() {
    bool a;
    bool b;
    a = true & b;
    return 0;
}
